# gpt-playground

./: .gitignore  Dockerfile  go.mod  go.sum  server.go
.github/workflows/: release.yml
api-auth/: Dockerfile  README.md  go.mod  go.sum  test.db
api-auth/cmd/api/: main.go
api-auth/internal/auth/: auth.go
api-auth/internal/database/: database.go
api-auth/internal/server/: routes.go  server.go
api-gpt/hello-world/: app.py  pyproject.toml
configs/: env-config.go
controller/: text-controller.go  video-controller.go
entity/: text.go
service/: text-service.go  video-service.go
